# ai-chat

./: # .env  .env  .gitignore  B2B-postman_collection.json  B2C-postman_collection.json  README.md  airtable.py  api.py  api_v2.py  chat_bot.py  chat_service.py  config.py  gpt_tools.py  main.py  models.py  nedbank_api.py  openai_assistant_manager.py  prompts.py  pyproject.toml  telegram_bot.py
knowledge/: knowledge.pages
new_file/: README.md
