[tool.poetry]
name = "chat-application"
version = "0.1.0"
description = ""
authors = ["Socrates Hlapolosa <socrates.hlapolosa@ghdlogistics.co.za>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sentry-sdk = "^1.38.0"
pydantic-settings = "^2.1.0"
openai = "^1.2.3"


[tool.poetry.group.dev.dependencies]
sentry-sdk = "^1.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
